Tidy up sample app

--- a/coolstore/pom.xml
+++ b/coolstore/pom.xml
@@ -92,6 +92,9 @@
             <layout>default</layout>
         </repository>
     </repositories>
+
+<!-- TODO: Add plugin repositories here -->
+
     <dependencyManagement>
 
         <dependencies>
